--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -4,11 +4,12 @@
     flex-direction: column;
     
     min-height: 100vh;
-    background-color: salmon;
+    background-color: rgb(45, 218, 123);
 }
 
 .header{
-    background-color: sienna;
+    
+    background-color: rgb(221, 196, 185);
 }
 
 .main{
