--- a/src/components/footer-float.module.scss
+++ b/src/components/footer-float.module.scss
@@ -8,20 +8,22 @@
 .button {
     color: white;
     font-size: 25px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
     background-color: rgb(0, 68, 255);
     border-radius: 100%;
-    height: 65px;
-    width: 65px;
+    height: 75px;
+    width: 75px;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.3);
 }
 
+//内側の円
 .button::after{
-    width: 55px;
-    height: 55px;
+    width: 65px;
+    height: 65px;
     content: "";
     position: absolute;
     border-radius: 100%;
