--- a/src/components/posts-card.module.scss
+++ b/src/components/posts-card.module.scss
@@ -41,13 +41,10 @@
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   width: 200px;
-  min-width: 200px;
+  min-width: 150px;
   height: 150px;
-  min-height: 130px;;
-  object-fit: contain;
-  object-fit: fill;
+  min-height: 130px;
 
-  
 }
 
 //PC
