contentmodel job 作成

--- a/src/components/posts-card.module.scss
+++ b/src/components/posts-card.module.scss
@@ -6,7 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(192, 252, 252);
+  background: linear-gradient(90deg, rgb(170, 170, 170)  0%,rgb(112, 112, 112) 100%);
+
 }
 
 .cards {
